centos_iptables/ikev2+lnmp_iptables
# Generated by iptables-save v1.4.7 on Thu Jun 16 19:07:58 2016
*raw
:PREROUTING ACCEPT [503331:721541920]
:OUTPUT ACCEPT [264744:24085469]
COMMIT
# Completed on Thu Jun 16 19:07:58 2016
# Generated by iptables-save v1.4.7 on Thu Jun 16 19:07:58 2016
*nat
:PREROUTING ACCEPT [812:50796]
:POSTROUTING ACCEPT [305:19072]
:OUTPUT ACCEPT [305:19072]
-A POSTROUTING -s 10.31.0.0/24 -o venet0 -j MASQUERADE 
-A POSTROUTING -s 10.31.1.0/24 -o venet0 -j MASQUERADE 
-A POSTROUTING -s 10.31.2.0/24 -o venet0 -j MASQUERADE 
COMMIT
# Completed on Thu Jun 16 19:07:58 2016
# Generated by iptables-save v1.4.7 on Thu Jun 16 19:07:58 2016
*mangle
:PREROUTING ACCEPT [503331:721541920]
:INPUT ACCEPT [487867:713401381]
:FORWARD ACCEPT [15044:7513601]
:OUTPUT ACCEPT [264744:24085469]
:POSTROUTING ACCEPT [279788:31599070]
COMMIT
# Completed on Thu Jun 16 19:07:58 2016
# Generated by iptables-save v1.4.7 on Thu Jun 16 19:07:58 2016
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1:152]
-A INPUT -i lo -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 3306 -j DROP 
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT 
-A INPUT -i venet0 -p esp -j ACCEPT 
-A INPUT -i venet0 -p udp -m udp --dport 500 -j ACCEPT 
-A INPUT -i venet0 -p tcp -m tcp --dport 500 -j ACCEPT 
-A INPUT -i venet0 -p udp -m udp --dport 4500 -j ACCEPT 
-A INPUT -i venet0 -p udp -m udp --dport 1701 -j ACCEPT 
-A INPUT -i venet0 -p tcp -m tcp --dport 1723 -j ACCEPT 
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A FORWARD -s 10.31.0.0/24 -j ACCEPT 
-A FORWARD -s 10.31.1.0/24 -j ACCEPT 
-A FORWARD -s 10.31.2.0/24 -j ACCEPT 
COMMIT
# Completed on Thu Jun 16 19:07:58 2016
