centos_iptables/ikev2_iptables
# Generated by iptables-save v1.4.7 on Thu Jun 16 07:20:44 2016
*raw
:PREROUTING ACCEPT [80720:116853046]
:OUTPUT ACCEPT [45336:4856730]
COMMIT
# Completed on Thu Jun 16 07:20:44 2016
# Generated by iptables-save v1.4.7 on Thu Jun 16 07:20:44 2016
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A POSTROUTING -s 10.31.0.0/24 -o venet0 -j SNAT --to-source 138.128.214.90 
-A POSTROUTING -s 10.31.1.0/24 -o venet0 -j SNAT --to-source 138.128.214.90 
-A POSTROUTING -s 10.31.2.0/24 -o venet0 -j SNAT --to-source 138.128.214.90 
COMMIT
# Completed on Thu Jun 16 07:20:44 2016
# Generated by iptables-save v1.4.7 on Thu Jun 16 07:20:44 2016
*mangle
:PREROUTING ACCEPT [80720:116853046]
:INPUT ACCEPT [80720:116853046]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [45337:4856882]
:POSTROUTING ACCEPT [45337:4856882]
COMMIT
# Completed on Thu Jun 16 07:20:44 2016
# Generated by iptables-save v1.4.7 on Thu Jun 16 07:20:44 2016
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1:152]
-A INPUT -i venet0 -p esp -j ACCEPT 
-A INPUT -i venet0 -p udp -m udp --dport 500 -j ACCEPT 
-A INPUT -i venet0 -p tcp -m tcp --dport 500 -j ACCEPT 
-A INPUT -i venet0 -p udp -m udp --dport 4500 -j ACCEPT 
-A INPUT -i venet0 -p udp -m udp --dport 1701 -j ACCEPT 
-A INPUT -i venet0 -p tcp -m tcp --dport 1723 -j ACCEPT 
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A FORWARD -s 10.31.0.0/24 -j ACCEPT 
-A FORWARD -s 10.31.1.0/24 -j ACCEPT 
-A FORWARD -s 10.31.2.0/24 -j ACCEPT 
COMMIT
# Completed on Thu Jun 16 07:20:44 2016
